package simulacion.continuo.terminos;

import simulacion.continuo.Estado;

public interface Termino {
    double calcular(Estado estado);
}
