@startuml
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false

package "simulacion.continuo" {
    class Main {
        + {static} main(args: String[])
    }

    class SistemaController {
        - vista: SistemaGrafico
        - simuladorService: SimuladorService
        - mapaSliders: Map<String, Slider>
        + initialize()
        + clickIniciar()
        + clickLimpiar()
        - generarInterfazDinamica()
    }

    class SistemaGrafico {
        - chartEvolucion: LineChart
        - chartFases: LineChart
        - lblTiempo: Label
        + preparar()
        + actualizar(pos, vel, fase, t)
    }

    class SimuladorService {
        + ejecutar(parametros, esLineal, callback)
    }

    class SistemaContinuo {
        - estado: Estado
        - h: double
        - t_max: double
        - tiempo: double
        + cargarParametros(config: Configuracion)
        + paso()
        + run()
    }

    class Estado {
        - variables: Map<String, Variable>
        + paso(dt: double)
        + get(nombre: String): Double
        + getVariables(): List<Variable>
    }

    class Variable {
        - terminos: List<Termino>
        - nombre: String
        - valor: double
        - derivada: double
        + calcularDerivada(estado: Estado)
        + avanzar(dt: double)
        + getValor(): double
        + getNombre(): String
    }

    package "configuracion" {
        class Configuracion <<record>> {
            + parametros: Map<String, Double>
            + h: double
            + t_max: double
            + tolerance: double
        }

        class ConfiguracionLoader {
            + {static} load(): Configuracion
        }
    }

    package "terminos" {
        interface Termino {
            + calcular(estado: Estado): double
        }

        class TerminoFactory {
            - parametros: Map<String, Double>
            + crear(nombre: String): Termino
        }

        class Amortiguamiento implements Termino
        class Gravedad implements Termino
        class ResorteNoLineal implements Termino
        class VelocidadActual implements Termino
    }

    package "metodos" {
        interface Integrador {
            + paso(estado: Estado, h: double)
        }

        class IntegradorEuler implements Integrador
        class IntegradorRK4 implements Integrador
    }
}

' Relaciones
Main ..> SistemaController : carga (FXML)
SistemaController o-- SistemaGrafico
SistemaController o-- SimuladorService

SimuladorService ..> SistemaContinuo : instancia
SimuladorService ..> TerminoFactory : usa
SimuladorService ..> Variable : crea
SimuladorService ..> Estado : crea
SimuladorService ..> ConfiguracionLoader : usa
SimuladorService ..> Configuracion : usa

SistemaContinuo o-- Estado
SistemaContinuo o-- Integrador
Estado o-- Variable

Variable o-- Termino : lista de

Termino ..> Estado : usa para calcular
Integrador ..> Estado : opera sobre
Integrador ..> Variable : actualiza valor de

ConfiguracionLoader ..> Configuracion : crea
SistemaContinuo ..> Configuracion : recibe datos de

@enduml

